03_basic_application/Istio_Hello_world/01_deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-v1
  labels:
    app: hello-world
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
      version: v1
  template:
    metadata:
      labels:
        app: hello-world
        version: v1
    spec:
      containers:
      - name: hello-world
        image: vsihnutheja88/hello-world:v1
        ports:
        - containerPort: 80
