03_basic_application/Istio_Hello_world/02_deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-v1
  labels:
    app: hello-world
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
      version: v2
  template:
    metadata:
      labels:
        app: hello-world
        version: v2
    spec:
      containers:
      - name: hello-world
        image: vsihnutheja88/hello-world:v2
        ports:
        - containerPort: 80
