03_basic_application/Istio_Hello_world/06_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
