03_basic_application/Istio_Hello_world/04_destinationRules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: hello-world
spec:
  host: hello-world-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
