03_basic_application/Istio_Hello_world/05_virtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
  - "*"
  gateways:
  - hello-world-gateway
  http:
  - route:
    - destination:
        host: hello-world-service
        subset: v1
      weight: 50
    - destination:
        host: hello-world-service
        subset: v2
      weight: 50
